+ improved image downloading (Added file-type checking)